0.0.1
* Fix: Direction of Attack as Multi-point, n >= 2 (#7)
* Updated dependencies
  - @babel/eslint-parser @ 7.15.7
  - electron @ 14.0.1
  - eslint-plugin-react @ 7.25.2
  - webpack @ 5.53.0
  - webpack-dev-server @ 4.2.1

0.0.0
* Sidebar/list - Changed editing behavior:
  - Removed mouse over/hover effect on option title
  - Click on title no longer initiates title editing
  - F2 key: initiate editing of option title
  - Enter key: toggle edititng of option title; save title
  - Escape key: cancel editing (if active); reset title
  - Escape key: deselect options (if ongoing editing)
  - On focus lost: stop editing; save title
* Sidebar/list - Fixed possible endless loop on selection.
* Sidebar/list - Avoid scrolling to focused option after SELECT/ALL.
* Keep selection in sidebar when hiding layers/features.
* Draw - Limit MINE CLUSTER to two points.
* Hide/show features and layers; individual and selected.
* Fix: Draw interaction for 2-point graphics (#3).
* Delete - Layers/features/links from list.
* Delete - Features from map.
* Delete - Shortcuts. DELETE key and CMD/CTRL-BACKSPACE.
* Fix: Resolved issue with duplicate entries in symbol palette.
* Fix: Symbol "Breach" (area Tasks) is wrong displayed on the map (#5)
* Transfer active/default layer from legacy projects.
* Links (ex. references) - Drag'n drop for layers and features.
* Fix: Tagging - Only support alphanumeric characters and '/' in tag names (#1)
* Draw interaction - Drawing is initialized by double clicking symbol in palette.
* Draw interaction - Shortscuts. Escape key cancels ongoing drawing.
* Draw interaction - Features SEIZE and TURN are currently unsupported
* Default Layer - Tag 'default' defines new default layer.
* Default Layer - Layer is created implicitly when needed and none is defined.
* Sidebar - Fixed issue with partially empty list.
* Sidebar - Store/restore visibility and current scope (group).
* Sidebar - Shortcuts. CMD/CTRL-B: toggle, CMD/CTRL-1: layers, CMD/CTRL-2: symbols.