@@ -1,4 +1,5 @@
 0.0.1
+* Highlight layers/features; Mouse down/up on scope tags. Supports multiselect.
 * Fix: Direction of Attack as Multi-point, n >= 2 (#7)
 * Updated dependencies
   - @babel/eslint-parser @ 7.15.7
